assets/css/style.css
/* Universal Selector */
.root{
    background-color:rgb(82, 129, 156);
    color: white;
}
header {
    padding: 35px;
    padding-bottom: 8px;
    padding-top: 10px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    color: #e41515;
    background-color: rgba(210, 180, 140, 0.801);
    display:flex;
    justify-content: space-between;
}

h1 {
    color: #5398c5;
}
header h1 {
    font-size: 75px;
    display: flex;
}
body {
    background-color: white;
    font-family: Arial, Helvetica, sans-serif;
}

header h1 .Jackson {
    color: #525252;
}

h2 {
    color:#525252;
    font-size: xx-large;
        display: block;
        font-size: 1.5em;
        margin-block-start: 0.83em;
        margin-block-end: 0.83em;
        margin-inline-start: 0px;
        margin-inline-end: 0px;
        font-weight: bold;
    }
}
section h2 nav ul {
    
}

header nav {
    padding-top: 15px;
    margin-right: 20px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 20px;
    height: 90px;
}

header nav ul {
    list-style-type: none;
}

header nav ul li {
    display: inline-block;
    margin-left: 25px;
}
section {
    display: flex;
    flex-basis: 10%;
}
body, html {
    height: 100%;
}
.about-me {
    align-content: space-between;
}
.justjoy {
    color:rgba(210, 180, 140, 0.801)
}
.joyjackson {
    align-items: center;
    padding-right: 60px;
    padding-left: 60px;
    padding-bottom: 10px;
    padding-top: 10px;
    color: rgba(210, 180, 140, 0.801);
    background-color:rgba(82, 129, 156, 0.726);
    align-items: center;   
}
.image1 span {
    position:absolute; 
    left: 50px;
    bottom: 0px;
    background-color: slategray;
}

.otherimgs span {
    position: absolute;
    left: 20px;
    top: 20px;
    background-color: slategray;
}
.about-me {
    display: flex;
}
 .bdr-rt {
     border-right: 10px solid rgba(210, 180, 140, 0.801);
     flex: 0 0 20%;
     text-align: right;
     padding-right: 30px;
     
 }
.content {
    display: flex;
    position: relative;
    padding-left: 60px;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-right: 20px;

    /* flex: 0 0 70%;
    padding-left: 30px;
    margin:0%;
    position: relative; */
    
}
.backgroundimg {
    padding: 35px;
        height: 200px;
        width: 90.5%;
        margin-bottom: 25px;
        background-image: url("../images/brickwoodhdr.jpg");
        background-size: cover;
        background-position: center;
    }
.backgroundimg {
    display:flex;
    align-items: flex-end;
    justify-content: flex-end;
    font-size: 40px;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    padding-right: 100px;
}  
.choosejoy {
    padding-right: 60px;
    padding-left: 60px;
    padding-bottom: 10px;
    padding-top: 10px;
    color: rgba(210, 180, 140, 0.801);
    background-color:rgba(82, 129, 156, 0.726);
    align-items: center;
}  
}
.image1 {
    flex: 0 0 200%;
    position: relative;
    padding-left: 30px;
}
.otherimgs {
    flex: 0 0 50%;
    margin:0%;
    position: relative;

}
.mother {
    display: flex;
    flex-wrap: wrap;
    position: relative;
    padding-left: 60px;
    padding-top: 20px;
    padding-bottom: 20px;
}
.bottom li {
    display: inline-block;
  flex-direction: row;
  padding-left: 40px;
  padding-top: 25px;
}
.headshot {
    padding-right: 20px;
}
footer {
    padding: 30px;
    clear: both;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    text-align: center;
}

footer h2 {
    font-size: 20px;
}

